// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should correctly render for 404 1`] = `
.emotion-19 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display:grid) {
  .emotion-19 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-19 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-19 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-19 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-16 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-16 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-16 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-16 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-16 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-16 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-16 {
    display: block;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-16 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-12 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-12:focus,
.emotion-12:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-18 emotion-19 emotion-17"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-16 emotion-17"
      dir="ltr"
    >
      <span
        class="emotion-0 emotion-1"
        data-e2e="status-code"
      >
        404
      </span>
      <h1
        class="emotion-2 emotion-3"
        id="content"
        tabindex="-1"
      >
        Page cannot be found
      </h1>
      <p
        class="emotion-4 emotion-5"
      >
        Sorry, we're unable to bring you the page you're looking for. Please try:
      </p>
      <ul>
        <li
          class="emotion-4 emotion-5"
        >
          Double checking the url
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          Searching for this page using the BBC search bar
        </li>
      </ul>
      <p
        class="emotion-4 emotion-5"
      >
        Alternatively, please visit the 
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news"
        >
          BBC News homepage.
        </a>
        
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorPage should correctly render for 404 for persian 1`] = `
.emotion-19 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display:grid) {
  .emotion-19 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-19 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-19 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-19 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-12 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-12:focus,
.emotion-12:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

@media (max-width:14.9375rem) {
  .emotion-16 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-16 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-16 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-16 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-16 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-16 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-16 {
    display: block;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-16 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-16 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

.emotion-2 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

<div>
  <main
    class="emotion-18 emotion-19 emotion-17"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-16 emotion-17"
      dir="rtl"
    >
      <span
        class="emotion-0 emotion-1"
        data-e2e="status-code"
      >
        ۴۰۴
      </span>
      <h1
        class="emotion-2 emotion-3"
        id="content"
        tabindex="-1"
      >
        این صفحه پیدا نشد
      </h1>
      <p
        class="emotion-4 emotion-5"
      >
        متاسفانه صفحه مورد نظر شما را پیدا نمی‌کنیم. لطفا گزینه‌های زیر را امتحان کنید:
      </p>
      <ul>
        <li
          class="emotion-4 emotion-5"
        >
          آدرس صفحه مورد نظر را دوباره بررسی کنید
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          با مرورگر خود صفحه را ریفرش کنید
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          در نوار جستجوی بی‌بی‌سی دنبال اطلاعات مورد نظرتان بگردید
        </li>
      </ul>
      <p
        class="emotion-4 emotion-5"
      >
        برای یافتن اطلاعات مورد نظر به صفحه اصلی 
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian"
        >
          BBC News فارسی
        </a>
         بروید
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorPage should correctly render for 500 1`] = `
.emotion-17 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display:grid) {
  .emotion-17 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-17 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-17 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-17 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-14 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-14 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-14 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-14 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-14 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-14 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-14 {
    display: block;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-14 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-10 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-10:focus,
.emotion-10:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-16 emotion-17 emotion-15"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-14 emotion-15"
      dir="ltr"
    >
      <span
        class="emotion-0 emotion-1"
        data-e2e="status-code"
      >
        500
      </span>
      <h1
        class="emotion-2 emotion-3"
        id="content"
        tabindex="-1"
      >
        Internal server error
      </h1>
      <p
        class="emotion-4 emotion-5"
      >
        Sorry, we're currently unable to bring you the page you're looking for. Please try:
      </p>
      <ul>
        <li
          class="emotion-4 emotion-5"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          Coming back again later
        </li>
      </ul>
      <p
        class="emotion-4 emotion-5"
      >
        Alternatively, please visit the 
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.com/news"
        >
          BBC News homepage.
        </a>
        
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorPage should correctly render for 500 for persian 1`] = `
.emotion-17 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display:grid) {
  .emotion-17 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-17 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-17 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-17 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-10 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-10:focus,
.emotion-10:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

@media (max-width:14.9375rem) {
  .emotion-14 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-14 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-14 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-14 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-14 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-14 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-14 {
    display: block;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-14 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

.emotion-2 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

<div>
  <main
    class="emotion-16 emotion-17 emotion-15"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-14 emotion-15"
      dir="rtl"
    >
      <span
        class="emotion-0 emotion-1"
        data-e2e="status-code"
      >
        ۵۰۰
      </span>
      <h1
        class="emotion-2 emotion-3"
        id="content"
        tabindex="-1"
      >
        خطا در سرور داخلی
      </h1>
      <p
        class="emotion-4 emotion-5"
      >
        متاسفانه صفحه مورد نظر شما در دسترس نیست. لطفا گزینه‌های زیر را امتحان کنید:
      </p>
      <ul>
        <li
          class="emotion-4 emotion-5"
        >
          با مرورگر خود صفحه را ریفرش کنید
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          بعدا دوباره امتحان کنید
        </li>
      </ul>
      <p
        class="emotion-4 emotion-5"
      >
        برای یافتن اطلاعات مورد نظر به صفحه اصلی 
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.com/persian"
        >
          BBC News فارسی
        </a>
         بروید
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorPage should correctly render for other status code 1`] = `
.emotion-17 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display:grid) {
  .emotion-17 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-17 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-17 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-17 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-17 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-14 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-14 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-14 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-14 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-14 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-14 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-14 {
    display: block;
    width: initial;
    margin: 0;
  }

@media (max-width:14.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-14 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-14 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-10 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-10:focus,
.emotion-10:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-16 emotion-17 emotion-15"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-14 emotion-15"
      dir="ltr"
    >
      <span
        class="emotion-0 emotion-1"
        data-e2e="status-code"
      >
        500
      </span>
      <h1
        class="emotion-2 emotion-3"
        id="content"
        tabindex="-1"
      >
        Internal server error
      </h1>
      <p
        class="emotion-4 emotion-5"
      >
        Sorry, we're currently unable to bring you the page you're looking for. Please try:
      </p>
      <ul>
        <li
          class="emotion-4 emotion-5"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          class="emotion-4 emotion-5"
        >
          Coming back again later
        </li>
      </ul>
      <p
        class="emotion-4 emotion-5"
      >
        Alternatively, please visit the 
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.com/news"
        >
          BBC News homepage.
        </a>
        
      </p>
    </div>
  </main>
</div>
`;
